--- a/css/normalize.css
+++ b/css/normalize.css
@@ -147,6 +147,11 @@ sup {
 
 img {
   border-style: none;
+  padding: 0;
+  display: block;
+  margin: 0 auto;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 /* Forms
